gdb/compile/compile-c-types.c
@@ -118,7 +118,11 @@ convert_struct_or_union (compile_c_instance *context, struct type *type)
 					  type->field (i).loc_bitpos ());
     }
 
-  context->plugin ().finish_record_or_union (result, type->length ());
+  if (context->plugin ().version () >= GCC_C_FE_VERSION_2)
+    context->plugin ().finish_record_with_alignment (result, type->length (),
+						     type_align (type));
+  else
+    context->plugin ().finish_record_or_union (result, type->length ());
   return result;
 }
 
